src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__containers__tests__draw_blocks_containers_none.snap
---
source: src/ui/draw_blocks/containers.rs
expression: setup.terminal.backend()
---
"╭ Containers ──────────────────────────╮"
"│         no containers running        │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
